Moved lifting axios get call to app to have in state and avoid flickering when clicking on page

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,8 +2,10 @@
     text-align: center;
 }
 
-
-
+.chart-container {
+    min-width: fit-content;
+    min-height: fit-content;
+}
 .home-header {
     text-align: center;
 }
